# moos-ivp-johngior

missions/lab_04/alpha/: alpha.moos
missions/lab_04/bravo_loiter/: bravo.bhv  bravo.moos
missions/lab_06/s15_alpha_pshare/: launch.sh
missions/lab_06/s16_alpha_bravo_pshare/: alpha.moos  bravo.bhv  bravo.moos  launch.sh  shoreside.moos
missions/lab_06/s18_henry_gilda_refuel/: meta_shoreside.moos  meta_vehicle.bhv
missions/lab_06/s19_henry_gilda_auto_refuel/: meta_vehicle.bhv
missions/lab_07/distributed_tsp/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pGenPath.moos  plug_pHelmIvP.moos  plug_pRealm.moos
missions/lab_07/distributed_tsp copy/: meta_shoreside.moos
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  CMakeLists.txt
src/lib_bhv_scout/: BHV_Scout.cpp  BHV_Scout.h  CMakeLists.txt
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h
src/pGenRescue/: CMakeLists.txt  GenRescue.cpp  GenRescue.h  GenRescue_In.h  GenRescue_Info.cpp  main.cpp
src/pGenRescue_clustering/: GenRescue.cpp  GenRescue.h
src/pGenRescue_error/: GenRescue.cpp
src/pGenRescue_john/: GenRescue.cpp
src/pGenRescue_s1/: GenRescue.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
src/pPointAssign_Alex/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
(+13 files in other folders)
